# Chat-System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  Sidebar.tsx
frontend/src/components/ui/: Modal.tsx  Toast.tsx
frontend/src/shared/: api.ts  store.ts  websocket.ts
migrations/: env.py  script.py.mako
mobile/: gradle.properties  settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
nginx/: nginx.conf
src/: __init__.py  config.py  main.py
src/api/: __init__.py  dependencies.py
src/api/middleware/: __init__.py  error_handler.py  rate_limiter.py
src/api/rest/: auth_router.py  health_router.py  messages_router.py  rooms_router.py  users_router.py
src/api/websocket/: __init__.py  ws_router.py
src/application/: __init__.py
src/application/interfaces/: __init__.py  cache_service.py  event_bus.py  repositories.py
src/application/services/: __init__.py  auth_service.py  chat_service.py  notification_service.py  presence_service.py  room_service.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  message.py  notification.py  room.py  session.py  user.py
src/domain/events/: __init__.py  base.py  chat_events.py  presence_events.py  room_events.py  system_events.py
src/domain/value_objects/: __init__.py  encryption.py  message_id.py  user_status.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  connection.py  models.py
src/infrastructure/database/repositories/: __init__.py  message_repo.py  room_repo.py  user_repo.py
src/infrastructure/observability/: __init__.py  health.py  logging.py  metrics.py
src/infrastructure/redis/: __init__.py  cache.py  client.py  pubsub.py  streams.py
src/infrastructure/security/: __init__.py  encryption.py  jwt_handler.py  password.py
src/infrastructure/websocket/: __init__.py  handlers.py  manager.py
src/infrastructure/workers/: __init__.py  dead_letter.py  message_worker.py  notification_worker.py
src/shared/: circuit_breaker.py  constants.py  retry.py  utils.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_cross_node_sync.py  test_messages_api.py  test_offline_delivery.py  test_rooms_api.py  test_websocket_flow.py
tests/unit/: test_auth_service.py  test_chat_service.py  test_circuit_breaker.py  test_connection_manager.py  test_domain_entities.py  test_jwt_handler.py  test_password_hasher.py  test_presence_service.py  test_room_service.py
(+25 files in other folders)
