[project]
name = "distributed-chat-system"
version = "1.0.0"
description = "Production-grade distributed chat backend with real-time messaging, multi-node sync, and fault tolerance"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AntiGravity" }]

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # --- Redis ---
    "redis[hiredis]>=5.0.0",

    # --- Authentication & Security ---
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",

    # --- Data Validation ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # --- Resilience ---
    "tenacity>=8.3.0",

    # --- Rate Limiting ---
    "slowapi>=0.1.9",

    # --- Observability ---
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",

    # --- Utilities ---
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "locust>=2.28.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# --- Ruff (Linter + Formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

# --- MyPy ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["redis.*", "slowapi.*", "prometheus_client.*"]
ignore_missing_imports = true
